--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend-devil",
   "version": "1.0.0",
-  "homepage": "",
+  "homepage": "https://github.com/movasyl/baseWorkflow",
   "authors": [
     "movasyl@gmail.com"
   ],
