--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/movasyl/baseWorkflow"
   },
   "keywords": [
     "front-end",
